# anamnetron

./: .gitignore  Cargo.toml  PRINCIPLES.md  README.md  TECH_STACK.md
.cargo/: audit.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: architect.md  implementer.md  reviewer.md  test-writer.md
.claude/commands/: arch-review.md  quality-check.md  review.md
.claude/hooks/: post-tool-check.sh  post-tool-format.sh  pre-commit.sh  pre-tool-edit.sh  pre-tool-write.sh  user-prompt-submit.sh
.claude/rules/: architecture.md  code-review.md  design-first.md  rust.md  security.md  testing.md  web-frontend.md
.github/workflows/: ci.yml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: discovery.rs  hashing.rs  languages.rs  lib.rs  mapping.rs  metrics.rs  type_flow.rs  type_metadata.rs  types.rs
crates/analyzer/src/languages/: go.rs  java.rs  mod.rs  python.rs  rust.rs  svelte.rs  typescript.rs
crates/analyzer/src/orchestrator/: descriptor.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/analyzer/tests/: analysis_depth.rs  dogfood.rs  incremental.rs  integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  manifest.rs  plugin.rs  plugin_commands.rs
crates/cli/tests/: cli_integration.rs  plugin_cli.rs
crates/core/: Cargo.toml
crates/core/src/: analysis.rs  canonical.rs  config.rs  conformance.rs  diff.rs  interchange.rs  interchange_store.rs  lib.rs  plugin.rs  roots.rs  validation.rs
crates/core/src/export/: dot.rs  mermaid.rs  mod.rs  svg.rs
crates/core/src/export/snapshots/: svt_core__export__dot__tests__dot_snapshot_test.snap  svt_core__export__mermaid__tests__mermaid_snapshot_test.snap
crates/core/src/model/: mod.rs
crates/core/src/store/: cozo.rs  error.rs  mod.rs
crates/core/tests/: compact_tests.rs  constraint_tests.rs  containment_tests.rs  dependency_tests.rs  dogfood.rs  edge_tests.rs  file_manifest_tests.rs  integration_test.rs  node_tests.rs  proptest_interchange.rs  schema_migration_tests.rs  snapshot_tests.rs  store_info_tests.rs  validation_tests.rs
crates/core/tests/helpers/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  main.rs  state.rs
crates/server/src/routes/: conformance.rs  diff.rs  edges.rs  graph.rs  health.rs  mod.rs  nodes.rs  projects.rs  push.rs  roots.rs  search.rs  snapshots.rs  store.rs
crates/server/tests/: api_integration.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
design/: architecture.yaml
docs/: AGGREGATION_QUERIES.md  CANONICAL_PATH_MAPPING.md  DATA_MODEL.md  INTERCHANGE_FORMAT.md  plugin-authoring.md
docs/adr/: 001-rust-backend.md  002-cozodb-graph-store.md  003-svelte-frontend.md  004-cytoscape-graph-viz.md  005-canonical-path-naming.md  006-graph-store-trait-abstraction.md  007-snapshot-versioning.md  008-constraint-model.md
docs/design/: AGGREGATION_QUERIES.md  CANONICAL_PATH_MAPPING.md  DATA_MODEL.md  INTERCHANGE_FORMAT.md  VISUALISATION_ARCHITECTURE.md  data-flow-analysis.md  flow-view.md
docs/plan/: 2026-02-15-milestone-1-core-data-model-design.md  2026-02-15-milestone-1-core-implementation.md  2026-02-15-milestone-2-design.md  2026-02-15-milestone-2-implementation.md  2026-02-17-milestone-3-analyzer-design.md  2026-02-17-milestone-3-implementation.md  2026-02-17-milestone-4-implementation.md  2026-02-17-milestone-5-implementation.md  2026-02-17-milestones-4-5-design.md  2026-02-19-milestone-10-design.md  2026-02-19-milestone-10-implementation.md  2026-02-19-milestone-12-implementation.md  2026-02-19-milestone-13-implementation.md  2026-02-19-milestone-14-implementation.md  2026-02-19-milestone-6-design.md  2026-02-19-milestone-6-implementation.md  2026-02-19-milestone-7-design.md  2026-02-19-milestone-7-implementation.md  2026-02-19-milestone-8-design.md  2026-02-19-milestone-8-implementation.md  2026-02-19-milestone-9-design.md  2026-02-19-milestone-9-implementation.md  2026-02-19-milestones-11-16-design.md  2026-02-20-analysis-depth-design.md  2026-02-20-diff-view-svg-export-design.md  2026-02-20-diff-view-svg-export-implementation.md  2026-02-20-dynamic-plugin-loading-design.md  2026-02-20-dynamic-plugin-loading-implementation.md  2026-02-20-known-gaps-cleanup-design.md  2026-02-20-known-gaps-cleanup-implementation.md  2026-02-20-milestone-15-implementation.md  2026-02-20-plugin-analyzer-support-design.md  2026-02-20-plugin-analyzer-support-implementation.md  2026-03-05-project-config-design.md  2026-03-06-m30-java-analyzer-design.md  PROGRESS.md
scripts/: build.sh
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  cytoscape-plugins.d.ts
web/src/components/: Breadcrumb.svelte  BundleView.svelte  ChordView.svelte  ConformanceReport.svelte  ErrorBoundary.svelte  FilterPanel.svelte  FilterSidebar.svelte  FlowView.svelte  GraphView.svelte  MatrixView.svelte  MermaidDrawer.svelte  MermaidView.svelte  NavigationPanel.svelte  NavigationTree.svelte  NavigationTreeNode.svelte  NodeDetail.svelte  ProjectSelector.svelte  SearchBar.svelte  SnapshotSelector.svelte  SunburstView.svelte  TreemapView.svelte
web/src/lib/: api.ts  dependency-matrix.ts  edge-bundling.ts  expansion.ts  filter-logic.ts  flow-animation.ts  flow-layout.ts  hierarchical-matrix.ts  hierarchy.ts  mermaid-gen.ts  router.ts  scope.ts  traversal.ts  types.ts  visual-encoding.ts  wasm.ts
web/src/lib/__tests__/: api.test.ts  dependency-matrix.test.ts  edge-bundling.test.ts  expansion.test.ts  filter-logic.test.ts  flow-layout.test.ts  flow-store.test.ts  hierarchical-matrix.test.ts  hierarchy.test.ts  mermaid-gen.test.ts  router.test.ts  scope.test.ts  traversal.test.ts  visual-encoding.test.ts
web/src/stores/: expansion.svelte.ts  filter.svelte.ts  flow.svelte.ts  focus.svelte.ts  graph.svelte.ts  graph.ts  mermaid.svelte.ts  navigation.svelte.ts  scope.svelte.ts  selection.svelte.ts  view.svelte.ts
