[package]
name = "svt-analyzer"
description = "Tree-sitter based code analysis and discovery for Anamnetron"
version.workspace = true
edition.workspace = true

[dependencies]
svt-core = { path = "../core" }
blake3 = "1"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
serde_json = "1"
toml = "0.8"
cargo_metadata = "0.19"
walkdir = "2"
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v5"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
