[package]
name = "svt-analyzer"
description = "Tree-sitter based code analysis and discovery for Anamnetron"
version.workspace = true
edition.workspace = true

[dependencies]
svt-core = { path = "../core" }
blake3 = "1"
tree-sitter = "=0.25.3"
tree-sitter-rust = "=0.23.2"
tree-sitter-typescript = "=0.23.2"
tree-sitter-go = "0.23"
tree-sitter-python = "=0.23.6"
tree-sitter-java = "0.23"
serde_json = "1"
toml = "0.8"
cargo_metadata = "0.19"
walkdir = "2"
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v5"] }
rust-code-analysis = { git = "https://github.com/mozilla/rust-code-analysis", branch = "master" }

[dev-dependencies]
tempfile = "3"
proptest = "1"
