[package]
name = "svt-cli"
description = "CLI entry point for Anamnetron"
version.workspace = true
edition.workspace = true

[[bin]]
name = "svt"
path = "src/main.rs"

[dependencies]
svt-core = { path = "../core" }
svt-analyzer = { path = "../analyzer" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
serde_yaml = "0.9"
libloading = "0.8"
thiserror = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
