[package]
name = "svt-core"
description = "Core data model, graph store, validation, and conformance logic for Anamnetron"
version.workspace = true
edition.workspace = true

[features]
default = ["store-sqlite"]
store = ["dep:cozo", "dep:chrono"]
store-sqlite = ["store", "cozo/storage-sqlite", "cozo/storage-sqlite-src", "cozo/rayon"]
wasm = ["store", "dep:wasm-bindgen", "dep:serde-wasm-bindgen", "dep:js-sys", "cozo/wasm"]

[dependencies]
cozo = { version = "0.7", optional = true, default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
glob-match = "0.2"
chrono = { version = "0.4", optional = true }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["v4", "js"] }

wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["yaml"] }
tempfile = "3.25.0"
