[package]
name = "svt-server"
description = "Axum API service and web UI host for software-visualizer-tool"
version.workspace = true
edition.workspace = true

[[bin]]
name = "svt-server"
path = "src/main.rs"

[dependencies]
svt-core = { path = "../core" }
svt-analyzer = { path = "../analyzer" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
anyhow = "1"
