[package]
name = "svt-server"
description = "Axum API service and web UI host for Anamnetron"
version.workspace = true
edition.workspace = true

[[bin]]
name = "svt-server"
path = "src/main.rs"

[dependencies]
svt-core = { path = "../core" }
svt-analyzer = { path = "../analyzer" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
