[package]
name = "svt-wasm"
description = "WASM bridge to svt-core for browser-side graph queries"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
svt-core = { path = "../core", default-features = false, features = ["store"] }
cozo = { version = "0.7", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
